resources/css/app.css
@layer tailwind-base, primevue, tailwind-utilities;

@layer tailwind-base {
    @tailwind base;
}

@layer tailwind-utilities {
    @tailwind components;
    @tailwind utilities;
}

:root {
    --app-light: #343541;
    --app-dark: #202123;
}

#scroll-container {
    scrollbar-width: thin;
    scrollbar-color: var(--app-light) transparent;
}

@media (prefers-color-scheme: light) {
    #scroll-container {
        scrollbar-width: thin;
        scrollbar-color: var(--app-light) transparent;
    }
}
@media (prefers-color-scheme: dark) {
    #scroll-container {
        scrollbar-width: thin;
        scrollbar-color: #ffffff transparent;
    }

    .p-confirm-dialog * {
        background-color: var(--app-dark);
        color: white;
    }

    .p-confirm-dialog .p-button-danger{
        background-color: #DC2626;
        border: none;
    }

    .p-confirm-dialog .p-button-danger * {
        background-color: #DC2626;
    }

    .p-dialog *{
        background-color: var(--app-dark);
        color: white;
    }
}

/*
    When updating 'highlight.js' styling in 'app.js',
    synchronize the background color here with the 'code'
    tag's new background to maintain consistency with
    tailwind's 'typography' plugin.
*/
pre {
    background-color: #0D1117;
}

